--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -4,9 +4,11 @@
 
 @forward "../../shared/list-with-float";
 
-body {
-    --fas-infobox-padding: var(--size-4-3);
-    --fas-infobox-max-width: 300px;
+@media (width > 600px) {
+    body {
+        --fas-infobox-padding: var(--size-4-3);
+        --fas-infobox-max-width: 300px;
+    }
 }
 
 :where(.fas-callout-infobox) .callout[data-callout="infobox"][data-callout-metadata~="full-width"],
@@ -21,7 +23,7 @@ body {
     --hr-color: rgba(var(--callout-color), var(--callout-border-opacity));
     --heading-spacing: var(--p-spacing);
 
-    max-width: var(--fas-infobox-max-width);
+    max-width: var(--fas-infobox-max-width, 100%);
 
     .callout-title {
         justify-content: center;
@@ -46,7 +48,7 @@ body {
     }
 
     > .callout-content > * {
-        padding-inline: var(--fas-infobox-padding);
+        padding-inline: var(--fas-infobox-padding, 0);
     }
 
     .callout-content hr:not(.sci-fi hr) {
@@ -108,9 +110,9 @@ body {
         z-index: 1;
     }
     img[alt*="cover"] {
-        max-width: unset;
-        width: calc(100% + 2 * var(--fas-infobox-padding));
-        margin-left: calc(-1 * var(--fas-infobox-padding));
+        max-width: var(--fas-infobox-max-width, 100%);
+        width: calc(100% + 2 * var(--fas-infobox-padding, 0));
+        margin-left: calc(-1 * var(--fas-infobox-padding, 0));
         border-bottom: 4px solid rgb(var(--callout-color));
     }
 
@@ -357,58 +359,38 @@ body {
 }
 
 /* Position */
-:where(.fas-callout-infobox)
-    .markdown-preview-view
-    .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"]),
-:where(.fas-callout-infobox)
-    .markdown-preview-view
-    .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="right"],
-.markdown-preview-view .callout[data-callout="fas-infobox"]:not([data-callout-metadata~="full-width"]),
-.markdown-preview-view
-    .callout[data-callout="fas-infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="right"] {
-    float: right;
-    margin-left: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
-}
-:where(.fas-callout-infobox)
-    .markdown-preview-view
-    .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="left"],
-.markdown-preview-view
-    .callout[data-callout="fas-infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="left"] {
-    float: left;
-    margin-right: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
-}
-:where(.fas-callout-infobox)
-    .markdown-preview-view
-    .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="center"],
-.markdown-preview-view
-    .callout[data-callout="fas-infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="center"] {
-    float: unset;
-    margin-inline: auto;
-}
-
-@container markdown-view (width < 500px) {
-    :where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout="infobox"],
+@media (width > 600px) {
     :where(.fas-callout-infobox)
         .markdown-preview-view
-        .callout[data-callout="infobox"][data-callout-metadata~="right"],
-    :where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout="infobox"][data-callout-metadata~="left"],
-    .markdown-preview-view .callout[data-callout="fas-infobox"],
-    .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="right"],
-    .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="left"] {
+        .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"]),
+    :where(.fas-callout-infobox)
+        .markdown-preview-view
+        .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="right"],
+    .markdown-preview-view .callout[data-callout="fas-infobox"]:not([data-callout-metadata~="full-width"]),
+    .markdown-preview-view
+        .callout[data-callout="fas-infobox"]:not(
+            [data-callout-metadata~="full-width"]
+        )[data-callout-metadata~="right"] {
+        float: right;
+        margin-left: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
+    }
+    :where(.fas-callout-infobox)
+        .markdown-preview-view
+        .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="left"],
+    .markdown-preview-view
+        .callout[data-callout="fas-infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="left"] {
+        float: left;
+        margin-right: calc(var(--overflow-width) + var(--fas-float-inline-margin, 12px));
+    }
+    :where(.fas-callout-infobox)
+        .markdown-preview-view
+        .callout[data-callout="infobox"]:not([data-callout-metadata~="full-width"])[data-callout-metadata~="center"],
+    .markdown-preview-view
+        .callout[data-callout="fas-infobox"]:not(
+            [data-callout-metadata~="full-width"]
+        )[data-callout-metadata~="center"] {
         float: unset;
-        margin-inline: 0;
-    }
-    :where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout="infobox"],
-    :where(.fas-callout-infobox)
-        .markdown-preview-view
-        .callout[data-callout="infobox"][data-callout-metadata~="right"],
-    .markdown-preview-view .callout[data-callout="fas-infobox"],
-    .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="right"] {
-        margin-left: auto;
-    }
-    :where(.fas-callout-infobox) .markdown-preview-view .callout[data-callout="infobox"][data-callout-metadata~="left"],
-    .markdown-preview-view .callout[data-callout="fas-infobox"][data-callout-metadata~="left"] {
-        margin-right: auto;
+        margin-inline: auto;
     }
 }
 
